--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
@@ -16,7 +16,7 @@ particle_density: 2500. 2650. 2650. 2650. 2650.
 
 # Emission scheme
 # ---------------
-emission_scheme: 1 # Ginoux
+emission_scheme: ginoux
 source_fraction: 0.0435465   0.106903   0.220117   0.484606   0.144828
 Ch_DU: 0.2 0.2 0.08 0.15 0.08 0.067  # resolution dependent tuning constant for emissions (a,b,c,d,e,f)
 #Ch_DU: 0.2 0.2 0.07 0.07 0.07 0.056 #original values
